--- a/NaveenOgAteeb/index.html
+++ b/NaveenOgAteeb/index.html
@@ -26,7 +26,7 @@
           
           <h1><span>How</span> can <span>attendance</span> and <span>enrollment</span> data prevent <span>dropout</span>  in school <span class="spormaal">?</span></h1>
 
-          <p>Hvordan engasjere barn til å få et bedre forhold til skolen i ung alder, samtidig som vi forhindrer at elever detter av underveis.</p>
+          <p>Hvordan(BYTT DENNE cETTER PÅh) engasjere barn til å få et bedre forhold til skolen i ung alder, samtidig som vi forhindrer at elever detter av underveis.</p>
 
         </div>
 
