--- a/NaveenOgAteeb/index.html
+++ b/NaveenOgAteeb/index.html
@@ -13,9 +13,9 @@
         <body>
         
             <div class="header">
-                <a href="index1.html" class="logo">Check <br>Attendance</a> <img src="assets/img/attendance3.png" height="80px">
+                <a href="index.html" class="logo">Check <br>Attendance</a> <img src="assets/img/attendance3.png" height="80px">
               <div class="header-right">
-                <a class="active" href="index1.html">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="index2.html">Solution</a>
                 <a href="#about">About</a>
               </div>
