--- a/NaveenOgAteeb/index2.html
+++ b/NaveenOgAteeb/index2.html
@@ -13,9 +13,9 @@
         <body>
         
         <div class="header">
-            <a href="#default" class="logo">Check <br>Attendance</a> <img src="assets/img/attendance3.png" height="80px">
+            <a href="index.html" class="logo">Check <br>Attendance</a> <img src="assets/img/attendance3.png" height="80px">
           <div class="header-right">
-            <a class="active" href="index1.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="index2.html">Solution</a>
             <a href="#about">About</a>
           </div>
@@ -25,7 +25,7 @@
 
           <h1>How can technology play a role in solving this issue?</h1>
 
-          <p>How can technology play a role in solving this issue?</p>
+          <p></p>
 
         </div>
 
