--- a/NaveenOgAteeb/index.html
+++ b/NaveenOgAteeb/index.html
@@ -13,7 +13,7 @@
         <body>
         
             <div class="header">
-                <a href="index.html" class="logo">Check <br>Attendance</a> <img src="assets/img/attendance3.png" height="80px">
+                <a href="index.html" class="logo">Check <br>Attendance</a> <img id="pic" src="assets/img/attendance3.png" height="80px">
               <div class="header-right">
                 <a class="active" href="index.html">Home</a>
                 <a href="index2.html">Solution</a>
