--- a/NaveenOgAteeb/index.html
+++ b/NaveenOgAteeb/index.html
@@ -13,7 +13,7 @@
         <body>
         
             <div class="header">
-                <a href="index.html" class="logo">Check <br>Attendance</a> <img id="pic" src="assets/img/attendance3.png" height="80px">
+                <a href="index.html" class="logo">Check <br>Attendance</a> <img alt="attendance" id="pic" src="assets/img/attendance3.png" height="80px">
               <div class="header-right">
                 <a class="active" href="index.html">Home</a>
                 <a href="index2.html">Solution</a>
@@ -32,7 +32,7 @@
         <div class="row">
         <div class="main">
             <h2>About us</h2>
-            <img src="assets/img/fun.jpg" height="200px">
+            <img alt="student_happy" src="assets/img/fun.jpg" height="200px">
             <p>
                 Vår løsning baserer seg på prinsippene om at et belønningssystem skaper engasjement i klasserommet. <br>
                 Dette i kombinasjon med innsamling av data rundt fravær og fraværsårsaker gjør at vi kan holde elevene på skolen med engasjement,<br>
@@ -41,7 +41,7 @@
             </p>
            
             <h2>Solution</h2>
-            <img src="assets/img/check.png" height="200px">
+            <img alt="check_board" src="assets/img/check.png" height="200px">
             <p>Løsningen registrerer oppmøte (enten på skolen eller hjemmefra på nett), og på slutten av dagen gjennomføres en flervalgstest. <br>
                  Dataene pr. elev kan distribueres til elevens foresatte, mens de aggregerte dataene kan sendes skolen/kommunen/staten. <br>
                   På denne måten kan foresatte holde øye...  <a href="index2.html">Les mer</a> </p>
