--- a/NaveenOgAteeb/index2.html
+++ b/NaveenOgAteeb/index2.html
@@ -13,7 +13,7 @@
         <body>
         
         <div class="header">
-            <a href="index.html" class="logo">Check <br>Attendance</a> <img id="pic" src="assets/img/attendance3.png" height="80px">
+            <a href="index.html" class="logo">Check <br>Attendance</a> <img alt="attendance" id="pic" src="assets/img/attendance3.png" height="80px">
           <div class="header-right">
             <a href="index.html">Home</a>
             <a class="active" href="index2.html">Solution</a>
@@ -36,7 +36,7 @@
               Dersom man benytter disse dataene sammen med statistiske modeller, kan man oppdage mønstre og årsakssammenhenger i hva som <br>
               gjør at elever dropper ut av skolen. Teknologien er dermed en “enabler” for å få samlet inn dataene man trenger for å kunne gjøre <br>
               analysene som må til for å finne ut av hvorfor folk dropper ut av skolen, slik at myndighetene kan iverksette tiltak for å motvirke dette så tidlig som mulig.</p>
-              <img src="assets/img/solution.jpg" height="200px">
+              <img alt="solution" src="assets/img/solution.jpg" height="200px">
             <h3>Engasjement</h3>
             <p>Elevene får tildelt en karakter knyttet til deres personlige profil. Gjennom applikasjonen kan elevene se antall poeng de har tjent (eller tapt), <br>
                samt en oversikt over deres fremgang over tid. Antall poeng belønnes på slutten av hver uke med ulike premier.</p>
