--- a/NaveenOgAteeb/index.html
+++ b/NaveenOgAteeb/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/style/main1.css" rel="stylesheet" type="text/css">
     <link href="assets/style/responsive.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <title>Innovation</title>
     <style>
        
         </style>
