--- a/NaveenOgAteeb/index2.html
+++ b/NaveenOgAteeb/index2.html
@@ -10,7 +10,7 @@
        
         </style>
         </head>
-        <body>
+    <body style="background-color: #f1f1f1 ;">
         
         <div class="header">
             <a href="index.html" class="logo">Check <br>Attendance</a> <img alt="attendance" id="pic" src="assets/img/attendance3.png" height="80px">
