--- a/NaveenOgAteeb/index2.html
+++ b/NaveenOgAteeb/index2.html
@@ -60,17 +60,17 @@
               <div>
                   <p>Studentnummer: s351901</p>
                   <p>Mohamed Modathir Alsaeid</p>
-                  <p>Email: <a href="mailto:s354364@oslomet.no">s351901@oslomet.no</a></p>
+                  <p>Email: <a style="color: #f1f1f1;"  href="mailto:s354364@oslomet.no">s351901@oslomet.no</a></p>
               </div>
               <div>
                   <p>Studentnummer: s351951</p>
                   <p>Muhammad Ateeb Salam</p>
-                  <p>Email: <a href="mailto:s354364@oslomet.no">s351951@oslomet.no</a></p>
+                  <p>Email: <a style="color: #f1f1f1;"  href="mailto:s354364@oslomet.no">s351951@oslomet.no</a></p>
               </div>
               <div>
                   <p>Studentnummer: s354362</p>
                   <p>Naveen Vijayasanker</p>
-                  <p>Email: <a href="mailto:s354364@oslomet.no">s354362@oslomet.no</a></p>
+                  <p>Email: <a style="color: #f1f1f1;" href="mailto:s354364@oslomet.no">s354362@oslomet.no</a></p>
               </div>
           </div>
     
